2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/Bill_of_Lading__c.object-meta.xml
<CustomObject>
    <label>Draft Bill of Lading</label>
    <nameField>
        <displayFormat>DBL{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Draft Bills of Lading</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>