2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Booking_Ref__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ref__c</fullName>
    <label>Booking Ref.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>