2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details__c</fullName>
    <label>Delivery Details</label>
    <type>TextArea</type>
</CustomField>