2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination__c</fullName>
    <label>Final Destination</label>
    <length>40</length>
    <type>Text</type>
</CustomField>