2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Marks_Number__c.field-meta.xml
<CustomField>
    <fullName>Marks_Number__c</fullName>
    <label>Marks &amp; Number</label>
    <type>TextArea</type>
</CustomField>