2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Measurement_M3__c.field-meta.xml
<CustomField>
    <fullName>Measurement_M3__c</fullName>
    <label>Measurement (CBM)</label>
    <type>TextArea</type>
</CustomField>