2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;PLEASE ADVISE THE FINAL CHARGES AND FAX / EMAIL&quot; &amp; BR() &amp;
&quot;A COPY TO US ASAP.&quot;</defaultValue>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>