2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Number_of__c.field-meta.xml
<CustomField>
    <fullName>Number_of__c</fullName>
    <label>Number of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 ORIGINAL + COPIES</fullName>
                <label>ORIGINAL BL - 3 COPIES</label>
            </value>
            <value>
                <fullName>SEA WAY BILL COPY</fullName>
            </value>
            <value>
                <fullName>TELEX RELEASE / SURRENDER BL COPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>