2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packages__c</fullName>
    <label>Number of Packages</label>
    <type>TextArea</type>
</CustomField>