2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Draft Bills of Lading</relationshipLabel>
    <relationshipName>Draft_Bills_of_Lading</relationshipName>
    <type>Lookup</type>
</CustomField>