2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Place_of_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Acceptance__c</fullName>
    <label>Place of Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>CYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>