2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Place_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery__c</fullName>
    <label>Place of Delivery</label>
    <length>40</length>
    <type>Text</type>
</CustomField>