2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/S_O_No_del__c.field-meta.xml
<CustomField>
    <fullName>S_O_No_del__c</fullName>
    <label>S/O No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>