2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Seal_No__c.field-meta.xml
<CustomField>
    <fullName>Seal_No__c</fullName>
    <label>Seal No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>