2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>40</length>
    <type>Text</type>
</CustomField>