2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Total_No_of_Packages_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Packages_In_Words__c</fullName>
    <label>Total No. of Packages (In Words)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>