2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Vessel_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_s_Name__c</fullName>
    <label>Vessel&apos;s Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>