2nd training/Community/Community/Community1/force-app/main/default/objects/Bill_of_Lading__c/fields/Weight_KGS__c.field-meta.xml
<CustomField>
    <fullName>Weight_KGS__c</fullName>
    <label>Weight (KGS)</label>
    <type>TextArea</type>
</CustomField>